<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_content_description_icon">Иконка</string>
    <string name="common_get_out">Выйти</string>
    <string name="common_get">Получить</string>
    <string name="black_pass_prize_title_1">Заберите награду!</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="hello">GTA San Andreas</string>
    <string name="app_name">SWAY ONLINE</string>
    <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
    <string name="text_button_resume_cellular">Resume download</string>
    <string name="text_button_wifi_settings">Wi-Fi settings</string>
    <string name="text_verifying_download">Verifying Download</string>
    <string name="text_validation_complete">XAPK File Validation Complete. Select OK to exit.</string>
    <string name="text_validation_failed">XAPK File Validation Failed.</string>
    <string name="text_button_pause">Pause Download</string>
    <string name="text_button_resume">Resume Download</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_cancel_verify">Cancel Verification</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="players_list_header_dialog">Список игроков</string>
    <string name="players_list_header_first_column">ID</string>
    <string name="players_list_header_fourth_column">Пинг</string>
    <string name="players_list_header_second_column">Ник игрока</string>
    <string name="players_list_header_third_column">Уровень</string>
    <string name="players_list_search_hint">Поиск игрока</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="state_unknown">Starting...</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_completed">Download finished</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed">Download failed</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="launcher_privacy_policy_1">Запуская это приложение, Вы соглашаетесь с</string>
    <string name="launcher_privacy_policy_2">Политикой конфиденциальности</string>
    <string name="common_ok">Хорошо</string>
    <string name="common_no">Нет</string>
    <string name="common_close">Закрыть</string>
    <string name="common_edittext_allowed_characters"><![CDATA[0123456789 .,!@#$€%^&amp;*()+=~?:;[]\'-_/abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZабвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ]]></string>
    <string name="dialog_join_from_launcher_msg">Вам необходимо зайти в игру используя лаунчер</string>
    <string name="dialog_join_from_launcher_ok">Принять</string>
    <string name="new_menu_setting_button">Расположение кнопок</string>
    <string name="new_menu_settings_car_button">Способ управления авто</string>
    <string name="new_menu_settings_joystick_chustvo">Чувствительность джойстика</string>
    <string name="new_menu_setting_button_change">Изменить</string>
    <string name="new_menu_settings_joystick">Джойстик</string>
    <string name="new_menu_setting_HUD">Игровой HUD</string>
    <string name="new_menu_setting_CHAT">Игровой чат</string>
    <string name="new_menu_setting_KEYBOARD">Игровая клавиатура</string>
    <string name="new_menu_setting_NEW">Новый</string>
    <string name="new_menu_settings_chustvo_hirozantle">Чувствительность обзора камеры по горизонтали</string>
    <string name="new_menu_settings_chustvo_vertical">Чувствительность обзора камеры по вертикали</string>
    <string name="new_menu_settings_chustvo_kameru_horizontale">Чувствительность камеры при прицеливании по горизонтали</string>
    <string name="new_menu_settings_chustvo_kameru_vertical">Чувствительность камеры при прицеливании по вертикали</string>
    <string name="new_menu_setting_set_default_value">Сбросить настройки</string>
    <string name="new_menu_setting_parameters_graphics_resolution">Разрешение</string>
    <string name="new_menu_setting_title_graphics">Настройки графики</string>
    <string name="new_menu_setting_parameters_graphics_ssaa">SSAA</string>
    <string name="new_menu_setting_parameters_graphics_max_fps">Максимальный FPS</string>
    <string name="new_menu_setting_parameters_graphics_vegetation">Качество растительности</string>
    <string name="new_menu_setting_parameters_graphics_water_quality">Качество воды</string>
    <string name="new_menu_setting_parameters_winter_slip">Зимнее скольжение (Дрифт)</string>
    <string name="inv_help_text_1">"Это Ваш инвентарь.
Выберите ячейку с документами, чтобы
взаимодействовать с ними.
Помните, взаимодействие происходит
только с активным предметом."</string>
    <string name="inv_help_text_2">Выберите кнопку “Обмен”, чтобы обменяться товаром.</string>
    <string name="new_menu_setting_parameters_winter_snow_intensity">Интенсивность снега</string>
    <string name="new_menu_setting_parameters_graphics_reflection_on_car">Качество отражений</string>
    <string name="new_menu_setting_parameters_graphics_visibility_range">Дальность прорисовки</string>
    <string name="new_menu_setting_parameters_graphics_shadow_quality">Качество теней</string>
    <string name="new_menu_setting_parameters_graphics_effects_quality">Качество эффектов</string>
    <string name="new_menu_setting_smoothing_sub_info">для включения необходимо поставить максимальное разрешение</string>
</resources>
