<?xml version="1.0" encoding="utf-8" ?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragsettuprava" android:layout_width="fill_parent" android:layout_height="fill_parent" android:focusable="true" android:focusableInTouchMode="true" android:scrollbarThumbVertical="@drawable/bg_scroll_thumb_red_cr8" android:scrollbarTrackVertical="@drawable/bg_scroll_track_gray_cr8" android:scrollbars="vertical" android:fadeScrollbars="false" tools:visibility="visible">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/container" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <View android:id="@+id/setting_menu_left_block" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintHorizontal_weight="1.2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:id="@+id/chutvo_obzora_horizontal" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="84dp" android:text="@string/new_menu_settings_chustvo_hirozantle" android:textColor="@color/white" android:textSize="10sp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.029" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
        <TextView android:id="@+id/updateButton" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_menu_setting_button" android:textColor="#FFFFFF" android:textSize="10sp" app:layout_constraintHorizontal_bias="0.023" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" tools:layout_editor_absoluteY="0dp" />
        <TextView android:id="@+id/dateTextView" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/new_menu_settings_car_button" android:textColor="#FFFFFF" android:textSize="10sp" app:layout_constraintHorizontal_bias="0.023" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@+id/updateButton" />
        <TextView android:id="@+id/chustvo_obzora" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/new_menu_settings_joystick_chustvo" android:textColor="#FFFFFF" android:textSize="10sp" app:layout_constraintHorizontal_bias="0.024" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
        <TextView android:id="@+id/textView29" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:background="@drawable/underline" android:text="@string/new_menu_setting_button_change" android:textColor="#ffffff" android:textSize="10sp" app:layout_constraintBottom_toBottomOf="@+id/updateButton" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/updateButton" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:id="@+id/textView30" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_marginTop="16dp" android:background="@drawable/underline" android:text="@string/new_menu_settings_joystick" android:textColor="#ffffff" android:textSize="10sp" app:layout_constraintBottom_toBottomOf="@+id/dateTextView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/dateTextView" app:layout_constraintTop_toBottomOf="@+id/textView29" />
        <TextView android:id="@+id/textView32" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:textColor="#FFFFFF" android:textSize="14sp" app:layout_constraintBottom_toTopOf="@+id/all_sound_seek_bar" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.979" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0" />
        <TextView android:id="@+id/textView33" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:textColor="#FFFFFF" android:textSize="14sp" app:layout_constraintBottom_toTopOf="@+id/horizontal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.979" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.969" />
        <TextView android:id="@+id/textView34" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:textColor="#FFFFFF" android:textSize="14sp" app:layout_constraintBottom_toTopOf="@+id/vertical" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.979" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0" />
        <TextView android:id="@+id/textView37" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="328dp" android:text="0" android:textColor="#FFFFFF" android:textSize="14sp" app:layout_constraintBottom_toTopOf="@+id/kameravertical" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.981" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:id="@+id/textView38" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="260dp" android:text="0" android:textColor="#FFFFFF" android:textSize="14sp" app:layout_constraintBottom_toTopOf="@+id/kamerahorizontale" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.981" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:id="@+id/textView39" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="348dp" android:text="Включение вида назад" android:textColor="#FFFFFF" android:textSize="10sp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.02" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
        <com.google.android.material.slider.Slider android:id="@+id/all_sound_seek_bar" style="@style/mySlider" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:stepSize="0.01" android:valueFrom="0.1" android:valueTo="2" app:labelBehavior="gone" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
        <com.google.android.material.slider.Slider android:id="@+id/horizontal" style="@style/mySlider" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="64dp" android:stepSize="0.01" android:valueFrom="0.1" android:valueTo="2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/chustvo_obzora" />
        <com.google.android.material.slider.Slider android:id="@+id/vertical" style="@style/mySlider" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="64dp" android:stepSize="0.01" android:valueFrom="0.1" android:valueTo="2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/chutvo_obzora_horizontal" />
        <com.google.android.material.slider.Slider android:id="@+id/kamerahorizontale" style="@style/mySlider" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="64dp" android:stepSize="0.01" android:valueFrom="0.1" android:valueTo="2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView3" />
        <com.google.android.material.slider.Slider android:id="@+id/kameravertical" style="@style/mySlider" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="64dp" android:stepSize="0.01" android:valueFrom="0.1" android:valueTo="2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView35" />
        <TextView android:id="@+id/textView3" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="152dp" android:text="@string/new_menu_settings_chustvo_vertical" android:textColor="#FFFFFF" android:textSize="10sp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.028" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
        <TextView android:id="@+id/textView35" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="216dp" android:text="@string/new_menu_settings_chustvo_kameru_horizontale" android:textColor="#FFFFFF" android:textSize="10sp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.028" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
        <TextView android:id="@+id/textView36" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="280dp" android:text="@string/new_menu_settings_chustvo_kameru_vertical" android:textColor="#FFFFFF" android:textSize="10sp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.027" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
        <androidx.appcompat.widget.SwitchCompat android:id="@+id/new_menu_setting_switch_look_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/thumb_selector" app:layout_constraintBottom_toBottomOf="@+id/textView39" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.499" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/textView39" app:track="@drawable/track_selector" />
        <TextView android:id="@+id/textView40" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="380dp" android:text="@string/new_menu_setting_HUD" android:textColor="#FFFFFF" android:textSize="10sp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.018" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
        <TextView android:id="@+id/textView41" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="410dp" android:text="@string/new_menu_setting_CHAT" android:textColor="#FFFFFF" android:textSize="10sp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.018" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
        <TextView android:id="@+id/textView42" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="440dp" android:text="@string/new_menu_setting_KEYBOARD" android:textColor="#FFFFFF" android:textSize="10sp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.018" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
        <TextView android:id="@+id/textView43" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/underline" android:text="@string/new_menu_setting_NEW" android:textColor="#FFFFFF" android:textSize="10sp" app:layout_constraintBottom_toBottomOf="@+id/textView42" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.476" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/textView42" />
        <TextView android:id="@+id/textView44" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_menu_setting_NEW" android:textColor="#FFFFFF" android:textSize="10sp" android:background="@drawable/underline" app:layout_constraintBottom_toBottomOf="@+id/textView41" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.476" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/textView41" />
        <TextView android:id="@+id/textView45" style="@style/MontserratRegular11spOr9ssp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_menu_setting_NEW" android:textColor="#FFFFFF" android:background="@drawable/underline" android:textSize="10sp" app:layout_constraintBottom_toBottomOf="@+id/textView40" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.476" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/textView40" />
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvSettingMenuSwitchHud" android:layout_width="64dp" android:layout_height="66dp" android:background="@drawable/bg_rectangle_gray_cr4_1" android:visibility="invisible" app:layout_constraintEnd_toEndOf="@+id/textView45" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@+id/textView45" app:layout_constraintTop_toTopOf="@+id/textView45" />
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvSettingMenuSwitchChat" android:layout_width="64dp" android:layout_height="66dp" android:background="@drawable/bg_rectangle_gray_cr4_1" android:visibility="invisible" app:layout_constraintEnd_toEndOf="@+id/textView44" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@+id/textView44" app:layout_constraintTop_toTopOf="@+id/textView44" />
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvSettingMenuSwitchKeyboard" android:layout_width="64dp" android:layout_height="66dp" android:background="@drawable/bg_rectangle_gray_cr4_1" android:visibility="invisible" app:layout_constraintEnd_toEndOf="@+id/textView43" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@+id/textView43" app:layout_constraintTop_toTopOf="@+id/textView43" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>